# collibra

./: .coveragerc  README.rst  setup.cfg  setup.py  todos.txt
src/collibra/: collibra_api.py  update_collibra.py
src/collibra/templates/: template_de.json  template_de_relations.json  template_dqr.json  template_dqr_relations.json
tests/: conftest.py  test_skeleton.py
